Fix contrast issues and centering problems

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,8 +97,28 @@ header {
   .dropdown-item {
     text-align: center;
   }
-  
+
+  .btn-outline {
+    margin-bottom: 1rem;
+  }
 }
+
+.navbar-toggler{
+  border: solid 1px #caad82;
+  color: #caad82;
+  padding: 4px 8px
+}
+
+.navbar-toggler-icon {
+  background-color: #caad82;
+}
+
+/* Remove the focus outline when clicked */
+.navbar-toggler:focus {
+  outline: none; /* Removes the focus outline */
+  box-shadow: none;   
+}
+
 /* För att säkerställa att dropdowns stängs korrekt på mobiler */
 @media (max-width: 890px) {
 
@@ -118,9 +138,8 @@ header {
 
 .btn-outline {
   background-color: #caad82;
-  margin-left: 1rem;
-  margin-right: 2rem;
-  color: 53131E;
+  margin: 0 2rem 0 1rem;
+  color: rgba(35, 51, 59);
   border-radius: 2em;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -133,6 +152,8 @@ header {
 
 @media (max-width: 991px) {
   .btn-outline {
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 1rem;
   }
 }
